Added the rest service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,3 +25,10 @@ stackoverflow {
   authKey = ""
   authKey = ${?AUTH_KEY_SO}
 }
+
+rest {
+  url = "localhost"
+  url = ${?URL}
+  port = 8080
+  port = ${?PORT}
+}
