--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -27,7 +27,7 @@ stackoverflow {
 }
 
 rest {
-  url = "https://stackoverflowbot.herokuapp.com"
+  url = "localhost"
   url = ${?URL}
   port = 8080
   port = ${?PORT}
